# Most-teste

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  models.py  script_consulta.py
app/consulta/: __init__.py  async_flow.py  common.py  service.py  sync_flow.py  validation.py
docs/: bonus-workflow.md  deploy-oracle.md
postman/: README.md  most-transparencia-bot.postman_collection.json
scripts/: benchmark-latency.sh  benchmark-memory.sh  benchmark-server.sh  consulta_playwright_edge_headless.py  consulta_selenium_edge.py  consulta_selenium_edge_headless.py
