[project]
name = "most-transparencia-bot"
version = "0.1.0"
description = "API e robô Playwright para consulta no Portal da Transparência."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "playwright>=1.53.0,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
